--- a/index.html
+++ b/index.html
@@ -5,11 +5,11 @@
 
   <meta charset='UTF-8'>
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <link rel="shortcut icon" href="img/website.ico">
-  <meta name="description" content="YourDescriptionHere">
-  <meta name="author" content="YourStudentID">
+  <link rel="shortcut icon" href="img/apeach_cSf_icon.ico">
+  <meta name="description" content="Resume">
+  <meta name="Jessica Choi" content="862210684">
 
-  <title>John Doe - Business Administration</title>
+  <title>Jessica Choi - Sociology</title>
 
   <!-- Bootstrap core CSS -->
   <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -27,9 +27,9 @@
 <body id="page-top">
   <nav class="navbar navbar-expand-lg navbar-dark bg-primary fixed-top" id="sideNav">
     <a class="navbar-brand js-scroll-trigger" href="#page-top">
-      <span class="d-block d-lg-none">John Doe</span>
+      <span class="d-block d-lg-none">Jessica Choi</span>
       <span class="d-none d-lg-block">
-        <img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="img/profilepicture.png" alt="Profile Picture">
+        <img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="img/JessicaChoi.jpg" alt="Profile Picture">
       </span>
     </a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -58,26 +58,29 @@
 
     <section class="resume-section p-3 p-lg-5 d-flex align-items-center" id="about">
       <div class="w-100">
-        <h1 class="mb-3">John Doe
+        <h1 class="mb-3">Jessica Choi
         </h1>
-        <div class="subheading mb-5">Business Administration📚</div>
-        <p class="lead mb-4">Enter bio here<br><br>
+        <div class="subheading mb-5">Sociology📚</div>
+        <p class="lead mb-4">Being a Korean American female, it has been a struggle with keeping up with the social standards. We always need to be put together and very “girly”. Being at school, I had to keep the image of a quiet and nice girl. This allowed me to serve in a lot of community services during my high school year which was one of the only pros. Thankfully, my parents weren’t strict as other parents but they still had this stigma in the back of their heads. It has been a blessing being able to grow up in a loving family and have so many privileges of growing up in a middle class neighborhood. Being in ROTC during my years in high school, it has made me realize how efficient a person can be. I also realized how tedious it is. Especially for the uniforms. It had taught me how I can put up my hair in a neat slick back bun and iron my clothes to look clean and crisp.
+<br><br>
 
-        Enter bio here<br><br>
+        I volunteered at my church every sunday to babysit 1-3 year olds while their parents were in service worshipping the Lord. This made me realize that watching babies wasn't easy but it also opened my eyes that I had a passion with children. At that moment, I saw myself teaching in the future and knew how much I loved children. They were so bubbly and positive. It was so healing to see all of them playing together. The one song I thought was perfect was God you’re so Good by Passion. The lyrics are “Amazing love That welcomes me, the kindness of mercy That bought with blood, wholeheartedly My soul undeserving God, You're so good Oh God, You're so good God, You're so good You're so good to me Behold the cross Age to age And hour by hour The dead are raised, the sinner saved The work of Your power God, You're so good God, You're so good God, You're so good You're so good to me”. This song really allowed me to more so pour my love to the children and have grace just like Jesus did for us.
+<br><br>
 
-        Enter bio here
+        We were fortunate to have a warm home in the winter and a cool home in the summer. We didn’t need to worry about what would happen if we didn’t have enough to pay the water, gas, and or the electric bill. We were very blessed to live this comfortable life and it allowed us to be thankful. In this time, one song that helped me keep myself humble was Brokenness Aside by All Sons and Daughters. The lyrics were so heart touching and they say “Will your grace run out If I let you down. 'Cause all I know Is how to run. 'Cause I am a sinner If it's not one thing it's another. Caught up in words Tangled in lies: But You are a Savior And You take brokenness aside and make it beautiful Beautiful.” After hearing these lyrics it made me really take time and think about how blessed and fortunate my situation is, of course this was before covid hit.
+
         </p>
         <div class="social-icons">
-          <a target="_blank" id="socialicon-1" href="https://linkedin.com">
+          <a target="_blank" id="socialicon-1" href="https://www.linkedin.com/in/jessica-choi-2b4230207/">
             <i class="fab fa-linkedin-in"></i>
           </a>
-          <a target="_blank" id="socialicon-2" href="https://github.com">
+          <a target="_blank" id="socialicon-2" href="https://github.com/JessicaChoi74">
             <i class="fab fa-github"></i>
           </a>
-          <a target="_blank" id="socialicon-3" href="https://twitter.com">
+          <a target="_blank" id="socialicon-3" href="https://twitter.com/Jessica19355499">
             <i class="fab fa-twitter"></i>
           </a>
-          <a target="_blank" id="socialicon-4" href="mailto:youremail@gmail.com">
+          <a target="_blank" id="socialicon-4" href="mailto:jessicachoi74@gmail.com">
             <i class="fa fa-envelope"></i>
           </a>
         </div>
@@ -92,48 +95,43 @@
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5 experience">
           <div class="resume-content">
-            <h3 class="mb-0">Developer</h3>
-            <div class="subheading mb-3"><a target="_blank" href="https://yourcompany.com">Company</a></div>
+            <h3 class="mb-0">Community Service</h3>
+            <div class="subheading mb-3"><a target="_blank" href="https://yourcompany.com">AFJROTC</a></div>
             <p>
-              • Developed websites for company X<br> 
-              • Speaker at hack-a-thons<br>
-              • Experience with HTML, CSS, Javascript, Photoshop<br>
+              • Volunteered in packing care packeges for veterns while in ROTC during high school<br> 
             </p>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">March 2019 - Present</span>
+            <span class="text-primary">September 2016 - June 2019</span>
           </div>
         </div>
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5 experience">
           <div class="resume-content">
-            <h3 class="mb-0">Cashier</h3>
-            <div class="subheading mb-3"><a target="_blank" href="https://wholefoods.com">Whole Foods</a></div>
+            <h3 class="mb-0">Evangelist</h3>
+            <div class="subheading mb-3"><a target="_blank" href="https://wholefoods.com">Church</a></div>
             <p>
-              • Responsible for checking out customers<br>
+              • Active in KCM, a christian club that evangelizes to people<br>
               • etc etc<br>
             </p>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">March 2017 - March 2019</span>
+            <span class="text-primary">August 2020 - Present</span>
           </div>
         </div>
 
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5 experience">
           <div class="resume-content">
-            <h3 class="mb-0">Teaching Assistant</h3>
-            <div class="subheading mb-3"><a target="_blank" href="https://ucr.edu">University of California Riverside</a></div>
+            <h3 class="mb-0">Babysitter</h3>
+            <div class="subheading mb-3"><a target="_blank" href="https://ucr.edu">Church</a></div>
             <p>
-            • Ran sessions to help students learn how to code<br>
-            • Reviewed and graded student coding projects<br>
-            • Created educational content to help promote student education<br>
-            • TA'd for over 400 students each academic quarter<br>
+            • Babysat children for church, well- trusted and is very well with handling children<br>
 
           </p>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">January 2011 - January 2016</span>
+            <span class="text-primary">January 2018 - Present</span>
           </div>
         </div>
 
@@ -152,33 +150,10 @@
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5 education">
           <div class="resume-content">
             <h3 class="mb-0">UC Riverside</h3>
-            <div class="subheading mb-3">Masters of Business Administration</div>
-            <div>MBA in International Business</div>
+            <div class="subheading mb-3">Degree in Sociology</div>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">August 2018 - December 2019</span>
-          </div>
-        </div>
-
-        <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5 education">
-          <div class="resume-content">
-            <h3 class="mb-0">University of California Riverside</h3>
-            <div class="subheading mb-3">Postgraduate Certificate in Business Management</div>
-            <div>Project Management</div>
-          </div>
-          <div class="resume-date text-md-right">
-            <span class="text-primary">June 2017</span>
-          </div>
-        </div>
-
-        <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5 education">
-          <div class="resume-content">
-            <h3 class="mb-0">University of California Riverside</h3>
-            <div class="subheading mb-3">Business Administration</div>
-            <div>Information Systems</div>
-          </div>
-          <div class="resume-date text-md-right">
-            <span class="text-primary">August 2012 - May 2016</span>
+            <span class="text-primary">August 2020 - June 2024</span>
           </div>
         </div>
 
@@ -191,7 +166,10 @@
       <div class="w-100">
         <h2 class="mb-5">Portfolio</h1>
         <center>
-            <img src="img/image2.jpeg" width="500px">
+            <img src="img/IMG_2341.jpg" width="500px">
+            <img src="img/IMG_2342.jpg" width="500px"><br>
+            <img src="img/IMG_2343.jpg" width="500px">
+            <img src="img/IMG_2344.jpg" width="500px"><br>
         </center>
       </div>
     </section>
@@ -199,7 +177,7 @@
     <hr class="m-0">
     <center>&copy; <script type="text/javascript">
   document.write(new Date().getFullYear());
-  </script> John Doe</center><br>
+  </script> Jessica Choi</center><br>
   </div>
   <!-- Bootstrap core JavaScript -->
   <script src="vendor/jquery/jquery.min.js"></script>
